--- a/src/RequestPrintUser/SelectShop.form
+++ b/src/RequestPrintUser/SelectShop.form
@@ -44,7 +44,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="Request">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Next"/>
+        <Property name="text" type="java.lang.String" value="Request"/>
       </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="RequestMouseClicked"/>
